--- a/style/ignite.css
+++ b/style/ignite.css
@@ -39,12 +39,12 @@ footer a, footer a:hover {
 }
 
 .form-check-input.is-valid, .was-validated .form-check-input:valid {
-    background-image: inherit !important;
     border-color: rgba(0, 0, 0, 0.25) !important;
 }
 
 .form-check-input.is-valid:checked, .was-validated .form-check-input:valid:checked {
-    background-color: #ffffff;
+    background-color: #0d6efd;
+    border-color: #0d6efd !important;
 }
 
 .form-select.is-valid, .was-validated .form-select:valid {
