--- a/style/spark.css
+++ b/style/spark.css
@@ -121,17 +121,17 @@ a:hover {
 }
 
 .form-control.is-valid, .was-validated .form-control:valid {
-    border-color:inherit !important;
+    border-color: inherit !important;
     background-image: inherit !important;
 }
 
 .form-check-input.is-valid, .was-validated .form-check-input:valid {
-    background-image: inherit !important;
-    border-color: rgba(0, 0, 0, 0.25);
+    border-color: rgba(0, 0, 0, 0.25) !important;
 }
 
 .form-check-input.is-valid:checked, .was-validated .form-check-input:valid:checked {
-    background-color: #ffffff;
+    background-color: #0d6efd;
+    border-color: #0d6efd !important;
 }
 
 .form-select.is-valid, .was-validated .form-select:valid {
