Refactore replace empty form actions.

--- a/install/templates/step1.html
+++ b/install/templates/step1.html
@@ -1,4 +1,4 @@
-<form method="post" action="">
+<form method="post">
     <input class="form-check-input" type="radio" name="language" value="en_EN" checked> I prefer to proceed in english.<br>
     <input class="form-check-input" type="radio" name="language" value="nl_NL"> Ik ga graag verder in het Nederlands.<br>
     <input class="form-check-input" type="radio" name="language" value="de_DE"> Ich mache in Deutsch weiter.<br>
