--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,6 @@
 <h5 class="mb-3">{% trans 'User administration' %}</h5>
 
-<form method="post" action="">
+<form method="post" action="users.php">
     <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
