Fix saving of permission templates.

--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -1,5 +1,5 @@
 <h5 class="mb-3">{% trans 'Edit permission template' %}</h5>
-<form class="needs-validation" method="post" action="edit_perm_templ.php" novalidate>
+<form class="needs-validation" method="post" action="" novalidate>
     <input type="hidden" name="templ_id" value="{{ id }}">
 
     <div class="col-sm-3">
