--- a/install/templates/header.html
+++ b/install/templates/header.html
@@ -8,7 +8,7 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel=stylesheet href="../style/ignite.css?time={{ file_version }}" type="text/css">
-    <script type="text/javascript" src="../inc/helper.js?time={{ file_version }}"></script>
+    <script type="text/javascript" src="includes/helper.js?time={{ file_version }}"></script>
 </head>
 <body>
 <header class="mb-4 border-bottom">
