Updated Bootstrap version and integrity checks, reformatted code.

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ iface_title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="inc/helper.js?time={{ file_version }}"></script>
@@ -18,107 +19,107 @@
             <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none"
                href="index.php">
                 {% if custom_header %}
-                    {% include ('custom/header.html') %}
+                {% include ('custom/header.html') %}
                 {% else %}
-                    <img class="me-2" src="images/logo.png" height="32">
-                    <span class="fs-4">{{ iface_title }}</span>
+                <img class="me-2" src="images/logo.png" height="32">
+                <span class="fs-4">{{ iface_title }}</span>
                 {% endif %}
             </a>
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                 {% if user_logged_in %}
-                    {% if perm_search %}
-                        <li class="p-1">
-                            <a href="search.php" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
-                            <a href="search.php" class="text-secondary text-decoration-none">{% trans 'Search' %}</a>
+                {% if perm_search %}
+                <li class="p-1">
+                    <a href="search.php" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
+                    <a href="search.php" class="text-secondary text-decoration-none">{% trans 'Search' %}</a>
+                </li>
+                {% endif %}
+                {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
+                <li class="p-1">
+                    <a href="list_zones.php" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                       href="#"
+                       role="button">{% trans 'Zones' %}</a>
+                    <ul class="dropdown-menu">
+                        {% if perm_view_zone_own or perm_view_zone_other %}
+                        <li><a class="dropdown-item" href="list_zones.php">{% trans 'List zones' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_master_add %}
+                        <li><a class="dropdown-item"
+                               href="add_zone_master.php">{% trans 'Add master zone' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_slave_add %}
+                        <li><a class="dropdown-item"
+                               href="add_zone_slave.php">{% trans 'Add slave zone' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_master_add %}
+                        <li><a class="dropdown-item"
+                               href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
                         </li>
-                    {% endif %}
-                    {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
-                        <li class="p-1">
-                            <a href="list_zones.php" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
-                            <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                               href="#"
-                               role="button">{% trans 'Zones' %}</a>
-                            <ul class="dropdown-menu">
-                                {% if perm_view_zone_own or perm_view_zone_other %}
-                                    <li><a class="dropdown-item" href="list_zones.php">{% trans 'List zones' %}</a></li>
-                                {% endif %}
-                                {% if perm_zone_master_add %}
-                                    <li><a class="dropdown-item"
-                                           href="add_zone_master.php">{% trans 'Add master zone' %}</a></li>
-                                {% endif %}
-                                {% if perm_zone_slave_add %}
-                                    <li><a class="dropdown-item"
-                                           href="add_zone_slave.php">{% trans 'Add slave zone' %}</a></li>
-                                {% endif %}
-                                {% if perm_zone_master_add %}
-                                    <li><a class="dropdown-item"
-                                           href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
-                                    </li>
-                                {% endif %}
-                                {% if perm_is_godlike and dblog_use == true %}
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="list_log_zones.php">{% trans 'Zone logs' %}</a></li>
-                                {% endif %}
-                            </ul>
+                        {% endif %}
+                        {% if perm_is_godlike and dblog_use == true %}
+                        <li>
+                            <hr class="dropdown-divider">
                         </li>
-                    {% endif %}
-                    <li class="p-1">
-                        <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
-                        <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                           href="#"
-                           role="button">{% trans 'Users' %}</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="users.php">{% trans 'User administration' %}</a></li>
-                            {% if perm_add_new %}
-                                <li><a class="dropdown-item" href="add_user.php">{% trans 'Add user' %}</a></li>
-                            {% endif %}
-                            {% if perm_templ_perm_edit %}
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item"
-                                       href="list_perm_templ.php">{% trans 'List permission templates' %}</a></li>
-                                <li><a class="dropdown-item"
-                                       href="add_perm_templ.php">{% trans 'Add permission template' %}</a></li>
-                            {% endif %}
-                            {% if perm_is_godlike and dblog_use == true %}
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item"
-                                   href="list_log_users.php">{% trans 'User logs' %}</a></li>
-                            {% endif %}
-                        </ul>
-                    </li>
-                    {% if perm_zone_master_add %}
-                        <li class="p-1">
-                            <a href="list_zone_templ.php" class="nav-link text-secondary text-center"><i
-                                    class="bi bi-files"></i></a>
-                            <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                               href="#"
-                               role="button">{% trans 'Templates' %}</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                       href="list_zone_templ.php">{% trans 'List zone templates' %}</a></li>
-                                <li><a class="dropdown-item"
-                                       href="add_zone_templ.php">{% trans 'Add zone template' %}</a></li>
-                            </ul>
+                        <li><a class="dropdown-item" href="list_log_zones.php">{% trans 'Zone logs' %}</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                {% endif %}
+                <li class="p-1">
+                    <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                       href="#"
+                       role="button">{% trans 'Users' %}</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="users.php">{% trans 'User administration' %}</a></li>
+                        {% if perm_add_new %}
+                        <li><a class="dropdown-item" href="add_user.php">{% trans 'Add user' %}</a></li>
+                        {% endif %}
+                        {% if perm_templ_perm_edit %}
+                        <li>
+                            <hr class="dropdown-divider">
                         </li>
-                    {% endif %}
-                    <li class="p-1">
-                        <a href="#" class="nav-link text-secondary"><i class="bi bi-person-circle"></i></a>
-                        <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                           href="#"
-                           role="button">{% trans 'Account' %}</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item"
-                                   href="change_password.php">{% trans 'Change password' %}</a></li>
-                            <li><a class="dropdown-item"
-                                   href="index.php?logout">{% trans 'Logout' %}</a></li>
-                        </ul>
-                    </li>
+                        <li><a class="dropdown-item"
+                               href="list_perm_templ.php">{% trans 'List permission templates' %}</a></li>
+                        <li><a class="dropdown-item"
+                               href="add_perm_templ.php">{% trans 'Add permission template' %}</a></li>
+                        {% endif %}
+                        {% if perm_is_godlike and dblog_use == true %}
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item"
+                               href="list_log_users.php">{% trans 'User logs' %}</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                {% if perm_zone_master_add %}
+                <li class="p-1">
+                    <a href="list_zone_templ.php" class="nav-link text-secondary text-center"><i
+                            class="bi bi-files"></i></a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                       href="#"
+                       role="button">{% trans 'Templates' %}</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item"
+                               href="list_zone_templ.php">{% trans 'List zone templates' %}</a></li>
+                        <li><a class="dropdown-item"
+                               href="add_zone_templ.php">{% trans 'Add zone template' %}</a></li>
+                    </ul>
+                </li>
+                {% endif %}
+                <li class="p-1">
+                    <a href="#" class="nav-link text-secondary"><i class="bi bi-person-circle"></i></a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                       href="#"
+                       role="button">{% trans 'Account' %}</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item"
+                               href="change_password.php">{% trans 'Change password' %}</a></li>
+                        <li><a class="dropdown-item"
+                               href="index.php?logout">{% trans 'Logout' %}</a></li>
+                    </ul>
+                </li>
                 {% endif %}
             </ul>
         </div>
@@ -126,17 +127,17 @@
 </header>
 
 {% if install_error %}
-    <div class="container">
-        <div class="alert alert-danger" role="alert"><strong>Error:</strong> {{ install_error | raw }}</div>
-    </div>
+<div class="container">
+    <div class="alert alert-danger" role="alert"><strong>Error:</strong> {{ install_error | raw }}</div>
+</div>
 {% endif %}
 
 {% if user_logged_in %}
-    {% if session_key_error %}
-        <div class="container">
-            <div class="alert alert-danger"><strong>Error:</strong> {{ session_key_error | raw }}</div>
-        </div>
-    {% endif %}
+{% if session_key_error %}
+<div class="container">
+    <div class="alert alert-danger"><strong>Error:</strong> {{ session_key_error | raw }}</div>
+</div>
+{% endif %}
 {% endif %}
 
 <main class="container pb-3 flex-shrink-0">
