If user doesn't want to delete perm template redirect him to the list.

--- a/templates/delete_perm_templ.html
+++ b/templates/delete_perm_templ.html
@@ -2,4 +2,4 @@
 
 <p>{% trans 'Are you sure?' %}</p>
 <input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_perm_templ.php?id={{ perm_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_perm_templ.php'" value="{% trans 'No' %}">
