--- a/templates/search.html
+++ b/templates/search.html
@@ -18,22 +18,22 @@
         <div class="col-sm-8 mt-1">
             <div class="form-check form-check-inline">
                 <input type="checkbox" class="form-check-input" name="zones" id="inlineCheckbox1"
-                       value="true" {{ search_by_zones }}>
+                       value="true" {% if search_by_zones %}checked{% endif %}>
                 <label class="form-check-label" for="inlineCheckbox1">{% trans 'Zones' %}</label>
             </div>
             <div class="form-check form-check-inline">
                 <input type="checkbox" class="form-check-input" name="records" id="inlineCheckbox2"
-                       value="true" {{ search_by_records }}>
+                       value="true" {% if search_by_records %}checked{% endif %}>
                 <label class="form-check-label" for="inlineCheckbox2">{% trans 'Records' %}</label>
             </div>
             <div class="form-check form-check-inline">
                 <input type="checkbox" class="form-check-input" name="wildcard" id="inlineCheckbox3"
-                       value="true" {{ search_by_wildcard }}>
+                       value="true" {% if search_by_wildcard %}checked{% endif %}>
                 <label class="form-check-label" for="inlineCheckbox3">{% trans 'Wildcard' %}</label>
             </div>
             <div class="form-check form-check-inline">
                 <input type="checkbox" class="form-check-input" name="reverse" id="inlineCheckbox4"
-                       value="true" {{ search_by_reverse }}>
+                       value="true" {% if search_by_reverse %}checked{% endif %}>
                 <label class="form-check-label" for="inlineCheckbox4">{% trans 'Reverse' %}</label>
             </div>
         </div>
@@ -46,10 +46,10 @@
     <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
-            <th><a href="javascript:zone_sort_by('name');">{% trans 'Name' %}</a></th>
-            <th><a href="javascript:zone_sort_by('type');">{% trans 'Type' %}</a></th>
-            <th><a href="javascript:zone_sort_by('count_records');">{% trans 'Records' %}</a></th>
-            <th><a href="javascript:zone_sort_by('fullname');">{% trans 'Owner' %}</a></th>
+            <th><a href="javascript:zone_sort_by('name');">{% trans 'Name' %}</a> {% if zone_sort_by == 'name' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:zone_sort_by('type');">{% trans 'Type' %}</a> {% if zone_sort_by == 'type' %}<i class="bi bi-arrow-down"></i>{% endif %} </th>
+            <th><a href="javascript:zone_sort_by('count_records');">{% trans 'Records' %}</a> {% if zone_sort_by == 'count_records' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:zone_sort_by('fullname');">{% trans 'Owner' %}</a> {% if zone_sort_by == 'fullname' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
             <th></th>
         </tr>
         </thead>
@@ -89,11 +89,11 @@
     <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
-            <th><a href="javascript:record_sort_by('name');">{% trans 'Name' %}</a></th>
-            <th><a href="javascript:record_sort_by('type');">{% trans 'Type' %}</a></th>
-            <th><a href="javascript:record_sort_by('prio');">{% trans 'Priority' %}</a></th>
-            <th><a href="javascript:record_sort_by('content');">{% trans 'Content' %}</a></th>
-            <th><a href="javascript:record_sort_by('ttl');">{% trans 'TTL' %}</a></th>
+            <th><a href="javascript:record_sort_by('name');">{% trans 'Name' %}</a> {% if record_sort_by == 'name' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:record_sort_by('type');">{% trans 'Type' %}</a> {% if record_sort_by == 'type' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:record_sort_by('prio');">{% trans 'Priority' %}</a> {% if record_sort_by == 'prio' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:record_sort_by('content');">{% trans 'Content' %}</a> {% if record_sort_by == 'content' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
+            <th><a href="javascript:record_sort_by('ttl');">{% trans 'TTL' %}</a> {% if record_sort_by == 'ttl' %}<i class="bi bi-arrow-down"></i>{% endif %}</th>
             <th></th>
         </tr>
         </thead>
