Use MVC like pattern, updated UX.

--- a/templates/delete_zone_templ.html
+++ b/templates/delete_zone_templ.html
@@ -1,4 +1,4 @@
 <h5 class="mb-3">{% trans 'Delete zone template' %} "{{ templ_name }}"</h5>
 <p>{% trans 'Are you sure?' %}</p>
 <input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_zone_templ.php?id={{ zone_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_zone_templ.php'" value="{% trans 'No' %}">
