--- a/templates/add_zone_templ_record.html
+++ b/templates/add_zone_templ_record.html
@@ -26,7 +26,7 @@
             </td>
             <td>
                 <input class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required>
-                <div class="invalid-feedback">". _('Provide content for your zone record' %}</div>
+                <div class="invalid-feedback">{% trans 'Provide content for your zone record' %}</div>
             </td>
             <td><input class="form-control form-control-sm" type="text" name="prio" value="{{ prio }}"></td>
             <td><input class="form-control form-control-sm" type="text" name="ttl" value="{{ ttl }}"></td>
