Removed superflous spacing.

--- a/templates/add_zone_templ_record.html
+++ b/templates/add_zone_templ_record.html
@@ -40,7 +40,7 @@
     </table>
     <table>
         <tr>
-            <td colspan="6"><br><b>{% trans 'Hint:' %}</b></td>
+            <td colspan="6"><b>{% trans 'Hint:' %}</b></td>
         </tr>
         <tr>
             <td colspan="6">{% trans 'The following placeholders can be used in template records' %}</td>
