--- a/templates/users.html
+++ b/templates/users.html
@@ -33,7 +33,7 @@
 
         {% set user_uid = user['uid'] %}
 
-        {% if (user_uid == session_userid and permissions['user_edit_own']) or (user_uid != session_userid and perm_edit_others) %}
+        {% if (user_uid == session_userid and permissions['user_edit_own']) or (user_uid != session_userid and perm_edit_others) or (permissions['user_is_ueberuser']) %}
         <tr>
             <td><input class="form-control form-control-sm" type="text" name="user[{{ user['uid'] }}][username]" value="{{ user ['username'] }}"></td>
             <td><input class="form-control form-control-sm" type="text" name="user[{{ user['uid'] }}][fullname]" value="{{ user ['fullname'] }}"></td>
