Use MVC like pattern, updated UX.

--- a/templates/delete_supermaster.html
+++ b/templates/delete_supermaster.html
@@ -8,4 +8,4 @@
 <input type="button" class="btn btn-primary btn-sm"
        onClick="location.href='delete_supermaster.php?master_ip={{ master_ip }}&ns_name={{ info['ns_name'] }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_supermasters.php'" value="{% trans 'No' %}">
