Added basic validation, updated variable names.

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -3,17 +3,17 @@
     <div class="row g-2 col-sm-4">
         <div>
             <label for="current_password" class="form-label">{% trans 'Current password' %}</label>
-            <input type="password" class="form-control form-control-sm" id="current_password" name="currentpass" value="" required>
+            <input type="password" class="form-control form-control-sm" id="current_password" name="old_password" value="" required>
             <div class="invalid-feedback">{% trans 'Provide current password' %}</div>
         </div>
         <div>
             <label for="new_password" class="form-label">{% trans 'New password' %}</label>
-            <input type="password" class="form-control form-control-sm" id="new_password" name="newpass" value="" required>
+            <input type="password" class="form-control form-control-sm" id="new_password" name="new_password" value="" required>
             <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
         </div>
         <div>
             <label for="repeat_password" class="form-label">{% trans 'Repeat password' %}:</label>
-            <input type="password" class="form-control form-control-sm" id="repeat_password" name="newpass2" value="" required>
+            <input type="password" class="form-control form-control-sm" id="repeat_password" name="new_password2" value="" required>
             <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
         </div>
         <div>
