--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -13,4 +13,4 @@
 <p>{% trans 'Are you sure?' %}</p>
 <input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_domain.php?id={{ zone_id }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_zones.php'" value="{% trans 'No' %}">
