Show converted idn names to utf8.

--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -53,7 +53,7 @@
                 {% endif %}
             </td>
             <td><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
-                {{ zone["name"] }}
+                {{ zone["utf8_name"] }}
                 </span></td>
             <td>{{ zone["type"] | lower }}</td>
             <td>{{ zone["count_records"] }}</td>
