--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -38,6 +38,10 @@
         </thead>
 
         <tbody>
+        {% if count_zones_view > iface_rowamount and count_zones_all_letterstart == "0" or count_zones_view == 0 %}
+        <td colspan="7">{% trans 'There are no zones to show in this listing.' %}</td>
+        {% endif %}
+
         {% for zone in zones %}
 
         {% if session_userlogin in zone['users'] %}
@@ -73,11 +77,12 @@
             {% endif %}
             <td>
                 <a class="btn btn-outline-primary btn-sm" href="edit.php?name={{ zone['name'] }}&id={{ zone['id'] }}">
-                <i class="bi bi-pencil-square"></i>
-                {% trans 'Edit zone' %}</a>
+                    <i class="bi bi-pencil-square"></i>
+                    {% trans 'Edit zone' %}</a>
                 {% if perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner) %}
-                <a class="btn btn-outline-danger btn-sm" href="delete_domain.php?name={{ zone['name'] }}&id={{ zone['id'] }}">
-                <i class="bi bi-trash"></i> {% trans 'Delete zone' %}
+                <a class="btn btn-outline-danger btn-sm"
+                   href="delete_domain.php?name={{ zone['name'] }}&id={{ zone['id'] }}">
+                    <i class="bi bi-trash"></i> {% trans 'Delete zone' %}
                 </a>
                 {% endif %}
             </td>
@@ -93,6 +98,8 @@
     {% endif %}
 
     {% if perm_edit == "all" or perm_edit == "own" %}
+    {% if count_zones_view != 0 %}
     <input type="submit" name="commit" value="{% trans 'Delete zone(s)' %}" class="btn btn-primary btn-sm">
+    {% endif %}
     {% endif %}
 </form>
