Added disposable alert support.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -37,6 +37,9 @@
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
     const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl, popoverOptions));
 
+    const alertList = document.querySelectorAll('.alert')
+    const alerts = [...alertList].map(element => new bootstrap.Alert(element))
+
     (function () {
         'use strict'
 
